// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Accordion AccordionGroup renders 1`] = `
<Fragment>
  <h2
    id="accordion-group"
  >
    Accordion group
  </h2>
  <p>
    If the accordions are wrapped in a 
    <CodeTags
      code=".accordion-group"
      type="secondary"
    />
    , only one will be open at a time.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="accordion-group"
    >
      <Accordion
        items={
          Array [
            Object {
              "content": "Proident cupidatat irure excepteur id minim dolore mollit amet reprehenderit consectetur aliqua officia Lorem elit. Cupidatat ea tempor ut esse. Aliquip exercitation in nisi reprehenderit anim Lorem. Excepteur nostrud officia irure tempor aute ipsum. Voluptate nisi incididunt proident enim reprehenderit fugiat fugiat magna sit reprehenderit Lorem anim. Aute commodo cillum nisi consectetur amet eiusmod do tempor incididunt anim.",
              "id": "exp-1",
              "title": "My title",
            },
            Object {
              "content": "Proident cupidatat irure excepteur id minim dolore mollit amet reprehenderit consectetur aliqua officia Lorem elit. Cupidatat ea tempor ut esse. Aliquip exercitation in nisi reprehenderit anim Lorem. Excepteur nostrud officia irure tempor aute ipsum. Voluptate nisi incididunt proident enim reprehenderit fugiat fugiat magna sit reprehenderit Lorem anim. Aute commodo cillum nisi consectetur amet eiusmod do tempor incididunt anim.",
              "id": "exp-2",
              "title": "My title",
            },
            Object {
              "content": "Proident cupidatat irure excepteur id minim dolore mollit amet reprehenderit consectetur aliqua officia Lorem elit. Cupidatat ea tempor ut esse. Aliquip exercitation in nisi reprehenderit anim Lorem. Excepteur nostrud officia irure tempor aute ipsum. Voluptate nisi incididunt proident enim reprehenderit fugiat fugiat magna sit reprehenderit Lorem anim. Aute commodo cillum nisi consectetur amet eiusmod do tempor incididunt anim.",
              "id": "exp-3",
              "title": "My title",
            },
          ]
        }
      />
    </div>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Accordion Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    The accordion component hides its content 
    <CodeTags
      code=".accordion-body"
      type="secondary"
    />
    , showing only its title 
    <CodeTags
      code=".accordion-header"
      type="secondary"
    />
    , until it is opened.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Accordion
      items={
        Array [
          Object {
            "content": "Proident cupidatat irure excepteur id minim dolore mollit amet reprehenderit consectetur aliqua officia Lorem elit. Cupidatat ea tempor ut esse. Aliquip exercitation in nisi reprehenderit anim Lorem. Excepteur nostrud officia irure tempor aute ipsum. Voluptate nisi incididunt proident enim reprehenderit fugiat fugiat magna sit reprehenderit Lorem anim. Aute commodo cillum nisi consectetur amet eiusmod do tempor incididunt anim.",
            "id": "exp-1",
            "title": "My title",
          },
          Object {
            "content": "Proident cupidatat irure excepteur id minim dolore mollit amet reprehenderit consectetur aliqua officia Lorem elit. Cupidatat ea tempor ut esse. Aliquip exercitation in nisi reprehenderit anim Lorem. Excepteur nostrud officia irure tempor aute ipsum. Voluptate nisi incididunt proident enim reprehenderit fugiat fugiat magna sit reprehenderit Lorem anim. Aute commodo cillum nisi consectetur amet eiusmod do tempor incididunt anim.",
            "id": "exp-2",
            "title": "My title",
          },
          Object {
            "content": "Proident cupidatat irure excepteur id minim dolore mollit amet reprehenderit consectetur aliqua officia Lorem elit. Cupidatat ea tempor ut esse. Aliquip exercitation in nisi reprehenderit anim Lorem. Excepteur nostrud officia irure tempor aute ipsum. Voluptate nisi incididunt proident enim reprehenderit fugiat fugiat magna sit reprehenderit Lorem anim. Aute commodo cillum nisi consectetur amet eiusmod do tempor incididunt anim.",
            "id": "exp-3",
            "title": "My title",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Accordion renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Accordions are components that toggles between hiding and showing content
  </p>
  <Overview />
  <AccordionGroup />
  <JavascriptMethods />
  <NpmInformation
    componentName="accordion"
  />
</DocContainer>
`;
